--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media print {
+    .hide-when-printing {
+        display: none !important;
+    }
+}
